--- a/APP/IOS/PointExchange/PointExchange/DiscoverCouponView.xib
+++ b/APP/IOS/PointExchange/PointExchange/DiscoverCouponView.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,39 +21,46 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" id="JFf-4c-K7x">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="130"/>
+            <rect key="frame" x="0.0" y="0.0" width="386" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="66E-9D-dem">
-                    <rect key="frame" x="20" y="0.0" width="650" height="130"/>
+                    <rect key="frame" x="0.0" y="0.0" width="608" height="150"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="8ZQ-9I-MRs">
-                            <rect key="frame" x="0.0" y="0.0" width="226" height="130"/>
+                            <rect key="frame" x="0.0" y="0.0" width="200" height="150"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="8ZQ-9I-MRs" secondAttribute="height" multiplier="4:3" id="hl5-1L-PVd"/>
+                            </constraints>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="Hk0-ze-aJW">
-                            <rect key="frame" x="424" y="0.0" width="200" height="130"/>
+                            <rect key="frame" x="408" y="0.0" width="200" height="150"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="Hk0-ze-aJW" secondAttribute="height" multiplier="4:3" id="LrY-7W-t08"/>
+                            </constraints>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="正在加载" translatesAutoresizingMaskIntoConstraints="NO" id="DNG-9x-19I">
-                            <rect key="frame" x="235" y="0.0" width="180" height="130"/>
+                            <rect key="frame" x="204" y="0.0" width="200" height="150"/>
                             <constraints>
-                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="180" id="H4D-Ot-qCz"/>
-                                <constraint firstAttribute="width" constant="180" id="nln-rx-qxj"/>
+                                <constraint firstAttribute="width" secondItem="DNG-9x-19I" secondAttribute="height" multiplier="4:3" id="L0S-lc-hnf"/>
                             </constraints>
                         </imageView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="DNG-9x-19I" firstAttribute="centerX" secondItem="66E-9D-dem" secondAttribute="centerX" id="2Kj-VM-Px6"/>
-                        <constraint firstAttribute="width" constant="650" id="34n-rA-hIJ"/>
+                        <constraint firstItem="8ZQ-9I-MRs" firstAttribute="width" secondItem="DNG-9x-19I" secondAttribute="width" id="2rx-sp-dpL"/>
+                        <constraint firstAttribute="width" constant="608" id="34n-rA-hIJ"/>
                         <constraint firstAttribute="bottom" secondItem="DNG-9x-19I" secondAttribute="bottom" id="GrC-qD-RfE"/>
-                        <constraint firstItem="DNG-9x-19I" firstAttribute="leading" secondItem="8ZQ-9I-MRs" secondAttribute="trailing" constant="9" id="JUf-ys-NIz"/>
+                        <constraint firstItem="DNG-9x-19I" firstAttribute="leading" secondItem="8ZQ-9I-MRs" secondAttribute="trailing" constant="4" id="JUf-ys-NIz"/>
                         <constraint firstAttribute="trailing" secondItem="Hk0-ze-aJW" secondAttribute="trailing" priority="250" constant="20" symbolic="YES" id="NYQ-mP-8Nu"/>
                         <constraint firstItem="DNG-9x-19I" firstAttribute="top" secondItem="8ZQ-9I-MRs" secondAttribute="top" id="QaY-Hc-ANQ"/>
                         <constraint firstItem="8ZQ-9I-MRs" firstAttribute="leading" secondItem="66E-9D-dem" secondAttribute="leading" id="TSe-UZ-Xbm"/>
                         <constraint firstItem="DNG-9x-19I" firstAttribute="bottom" secondItem="Hk0-ze-aJW" secondAttribute="bottom" id="Xf6-Fr-Uf5"/>
                         <constraint firstItem="DNG-9x-19I" firstAttribute="top" secondItem="Hk0-ze-aJW" secondAttribute="top" id="aak-tx-e4r"/>
                         <constraint firstItem="DNG-9x-19I" firstAttribute="bottom" secondItem="8ZQ-9I-MRs" secondAttribute="bottom" id="quE-1R-qCJ"/>
-                        <constraint firstItem="Hk0-ze-aJW" firstAttribute="leading" secondItem="DNG-9x-19I" secondAttribute="trailing" constant="9" id="w7Z-vR-Iit"/>
+                        <constraint firstItem="Hk0-ze-aJW" firstAttribute="width" secondItem="DNG-9x-19I" secondAttribute="width" id="vR1-kn-kLg"/>
+                        <constraint firstItem="Hk0-ze-aJW" firstAttribute="leading" secondItem="DNG-9x-19I" secondAttribute="trailing" constant="4" id="w7Z-vR-Iit"/>
                         <constraint firstItem="DNG-9x-19I" firstAttribute="top" secondItem="66E-9D-dem" secondAttribute="top" id="yJs-qq-asJ"/>
                     </constraints>
                 </view>
@@ -62,11 +70,11 @@
                 <constraint firstItem="66E-9D-dem" firstAttribute="centerY" secondItem="JFf-4c-K7x" secondAttribute="centerY" id="fCw-I7-1Xd"/>
                 <constraint firstAttribute="bottom" secondItem="66E-9D-dem" secondAttribute="bottom" id="jEG-Wf-h7m"/>
                 <constraint firstAttribute="trailing" secondItem="66E-9D-dem" secondAttribute="trailing" constant="20" symbolic="YES" id="keu-F2-vyz"/>
-                <constraint firstItem="66E-9D-dem" firstAttribute="leading" secondItem="JFf-4c-K7x" secondAttribute="leading" constant="20" symbolic="YES" id="nv9-Sq-LFs"/>
+                <constraint firstItem="66E-9D-dem" firstAttribute="leading" secondItem="JFf-4c-K7x" secondAttribute="leading" id="nv9-Sq-LFs"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="f05-tq-BQD"/>
-            <point key="canvasLocation" x="411.5" y="-505"/>
+            <point key="canvasLocation" x="530" y="-450"/>
         </scrollView>
     </objects>
     <resources>
